@@ -184,7 +184,6 @@ int import_pool_pv(const struct format_type *fmt, struct pool *mem,
 
 	list_init(&pv->tags);
 	list_init(&pv->segments);
-	list_init(&pv->free_segments);
 
 	if (!alloc_pv_segment_whole_pv(mem, pv)) {
 		stack;
