@@ -16,16 +16,121 @@
 #include "lib.h"
 #include "pv_map.h"
 #include "hash.h"
+#include "pv_alloc.h"
 
-static int _create_maps(struct pool *mem, struct list *pvs, struct list *maps)
+/*
+ * Areas are maintained in size order, largest first.
+ */
+static void _insert_area(struct list *head, struct pv_area *a)
 {
-	struct list *tmp;
+	struct pv_area *pva;
+
+	list_iterate_items(pva, head) {
+		if (a->count > pva->count)
+			break;
+	}
+
+	list_add(&pva->list, &a->list);
+}
+
+static int _create_single_area(struct pool *mem, struct pv_map *pvm,
+			       uint32_t start, uint32_t length)
+{
+	struct pv_area *pva;
+
+	if (!(pva = pool_zalloc(mem, sizeof(*pva)))) {
+		stack;
+		return 0;
+	}
+
+	log_debug("Allowing allocation on %s start PE %" PRIu32 " length %"
+		  PRIu32, dev_name(pvm->pv->dev), start, length);
+	pva->map = pvm;
+	pva->start = start;
+	pva->count = length;
+	_insert_area(&pvm->areas, pva);
+
+	return 1;
+}
+
+static int _create_alloc_areas_for_pv(struct pool *mem, struct pv_map *pvm,
+				      uint32_t start, uint32_t count)
+{
+        struct pv_segment *peg;
+	uint32_t pe, end, area_len;
+
+	/* Only select extents from start to end inclusive */
+	end = start + count - 1;
+	if (end > pvm->pv->pe_count - 1)
+		end = pvm->pv->pe_count - 1;
+
+	pe = start;
+
+	/* Walk through complete ordered list of device segments */
+        list_iterate_items(peg, &pvm->pv->segments) {
+		/* pe holds the next extent we want to check */
+
+		/* Beyond the range we're interested in? */
+		if (pe > end)
+			break;
+
+		/* Skip if we haven't reached the first seg we want yet */
+		if (pe > peg->pe + peg->len - 1)
+			continue;
+
+		/* Free? */
+		if (peg->lvseg)
+			goto next;
+
+		/* How much of this peg do we need? */
+		area_len = (end >= peg->pe + peg->len - 1) ?
+			   peg->len - (pe - peg->pe) : end - pe + 1;
+
+		if (!_create_single_area(mem, pvm, pe, area_len)) {
+			stack;
+			return 0;
+		}
+
+      next:
+		pe = peg->pe + peg->len;
+        }
+
+	return 1;
+}
+
+static int _create_all_areas_for_pv(struct pool *mem, struct pv_map *pvm,
+				    struct list *pe_ranges)
+{
+	struct pe_range *aa;
+
+	if (!pe_ranges) {
+		/* Use whole PV */
+		if (!_create_alloc_areas_for_pv(mem, pvm, UINT32_C(0),
+						pvm->pv->pe_count)) {
+			stack;
+			return 0;
+		}
+
+		return 1;
+	}
+
+	list_iterate_items(aa, pe_ranges) {
+		if (!_create_alloc_areas_for_pv(mem, pvm, aa->start,
+						aa->count)) {
+			stack;
+			return 0;
+		}
+	}
+
+	return 1;
+}
+
+static int _create_maps(struct pool *mem, struct list *pvs, struct list *pvms)
+{
 	struct pv_map *pvm;
 	struct pv_list *pvl;
 
-	list_iterate(tmp, pvs) {
-		pvl = list_item(tmp, struct pv_list);
-
+	list_iterate_items(pvl, pvs) {
 		if (!(pvl->pv->status & ALLOCATABLE_PV))
 			continue;
 
@@ -34,255 +139,43 @@ static int _create_maps(struct pool *mem, struct list *pvs, struct list *maps)
 			return 0;
 		}
 
-		pvm->pvl = pvl;
-		if (!(pvm->allocated_extents =
-		      bitset_create(mem, pvl->pv->pe_count))) {
+		pvm->pv = pvl->pv;
+
+		list_init(&pvm->areas);
+		list_add(pvms, &pvm->list);
+
+		if (!_create_all_areas_for_pv(mem, pvm, pvl->pe_ranges)) {
 			stack;
 			return 0;
 		}
-
-		list_init(&pvm->areas);
-		list_add(maps, &pvm->list);
 	}
 
 	return 1;
-}
-
-static int _set_allocd(struct hash_table *hash,
-		       struct physical_volume *pv, uint32_t pe)
-{
-	struct pv_map *pvm;
-
-	if (!(pvm = (struct pv_map *) hash_lookup(hash, dev_name(pv->dev)))) {
-		/*
-		 * it doesn't matter that this fails, it just
-		 * means this part of the lv is on a pv that
-		 * we're not interested in allocating to.
-		 */
-		return 1;
-	}
-
-	/* sanity check */
-	if (bit(pvm->allocated_extents, pe)) {
-		log_error("Physical extent %d of %s referenced by more than "
-			  "one logical volume", pe, dev_name(pv->dev));
-		return 0;
-	}
-
-	bit_set(pvm->allocated_extents, pe);
-	return 1;
-}
-
-static int _fill_bitsets(struct volume_group *vg, struct list *maps)
-{
-	struct list *lvh, *pvmh, *segh;
-	struct logical_volume *lv;
-	struct pv_map *pvm;
-	uint32_t s, pe;
-	struct hash_table *hash;
-	struct lv_segment *seg;
-	int r = 0;
-
-	if (!(hash = hash_create(128))) {
-		log_err("Couldn't create hash table for pv maps.");
-		return 0;
-	}
-
-	/* populate the hash table */
-	list_iterate(pvmh, maps) {
-		pvm = list_item(pvmh, struct pv_map);
-		if (!hash_insert(hash, dev_name(pvm->pvl->pv->dev), pvm)) {
-			stack;
-			goto out;
-		}
-	}
-
-	/* iterate through all the lv's setting bit's for used pe's */
-	list_iterate(lvh, &vg->lvs) {
-		lv = list_item(lvh, struct lv_list)->lv;
-
-		list_iterate(segh, &lv->segments) {
-			seg = list_item(segh, struct lv_segment);
-
-			for (s = 0u; s < seg->area_count; s++) {
-				for (pe = 0u; pe < seg->area_len; pe++) {
-					if (seg->area[s].type != AREA_PV)
-						continue;
-					if (!_set_allocd(hash,
-						 seg->area[s].u.pv.pvseg->pv,
-						 seg->area[s].u.pv.pvseg->pe
-						 + pe)) {
-						stack;
-						goto out;
-					}
-				}
-			}
-		}
-	}
-	r = 1;
-
-      out:
-	hash_destroy(hash);
-	return r;
 }
 
 /*
- * Areas are maintained in size order.
+ * Create list of PV areas available for this particular allocation
  */
-static void _insert_area(struct list *head, struct pv_area *a)
-{
-	struct list *pvah;
-	struct pv_area *pva = NULL;
-
-	if (list_empty(head)) {
-		list_add(head, &a->list);
-		return;
-	}
-
-	list_iterate(pvah, head) {
-		pva = list_item(pvah, struct pv_area);
-
-		if (pva->count < a->count)
-			break;
-	}
-
-	list_add_h(&pva->list, &a->list);
-}
-
-static int _create_single_area(struct pool *mem, struct pv_map *pvm,
-			       uint32_t end, uint32_t *extent)
-{
-	uint32_t e = *extent, b;
-	struct pv_area *pva;
-
-	while (e <= end && bit(pvm->allocated_extents, e))
-		e++;
-
-	if (e > end) {
-		*extent = e;
-		return 1;
-	}
-
-	b = e++;
-
-	while (e <= end && !bit(pvm->allocated_extents, e))
-		e++;
-
-	if (!(pva = pool_zalloc(mem, sizeof(*pva)))) {
-		stack;
-		return 0;
-	}
-
-	log_debug("Allowing allocation on %s start PE %" PRIu32 " length %"
-		  PRIu32, dev_name(pvm->pvl->pv->dev), b, e - b);
-	pva->map = pvm;
-	pva->start = b;
-	pva->count = e - b;
-	_insert_area(&pvm->areas, pva);
-	*extent = e;
-
-	return 1;
-}
-
-static int _create_areas(struct pool *mem, struct pv_map *pvm, uint32_t start,
-			 uint32_t count)
-{
-	uint32_t pe, end;
-
-	end = start + count - 1;
-	if (end > pvm->pvl->pv->pe_count - 1)
-		end = pvm->pvl->pv->pe_count - 1;
-
-	pe = start;
-	while (pe <= end)
-		if (!_create_single_area(mem, pvm, end, &pe)) {
-			stack;
-			return 0;
-		}
-
-	return 1;
-}
-
-static int _create_allocatable_areas(struct pool *mem, struct pv_map *pvm)
-{
-	struct list *alloc_areas, *aah;
-	struct pe_range *aa;
-
-	alloc_areas = pvm->pvl->pe_ranges;
-
-	if (alloc_areas) {
-		list_iterate(aah, alloc_areas) {
-			aa = list_item(aah, struct pe_range);
-			if (!_create_areas(mem, pvm, aa->start, aa->count)) {
-				stack;
-				return 0;
-			}
-
-		}
-	} else {
-		/* Use whole PV */
-		if (!_create_areas(mem, pvm, UINT32_C(0),
-				   pvm->pvl->pv->pe_count)) {
-			stack;
-			return 0;
-		}
-	}
-
-	return 1;
-}
-
-static int _create_all_areas(struct pool *mem, struct list *maps,
-			     struct list *pvs)
-{
-	struct list *tmp;
-	struct pv_map *pvm;
-
-	list_iterate(tmp, maps) {
-		pvm = list_item(tmp, struct pv_map);
-
-		if (!_create_allocatable_areas(mem, pvm)) {
-			stack;
-			return 0;
-		}
-	}
-
-	return 1;
-}
-
 struct list *create_pv_maps(struct pool *mem, struct volume_group *vg,
-			    struct list *pvs)
+			    struct list *allocatable_pvs)
 {
-	struct list *maps = pool_zalloc(mem, sizeof(*maps));
+	struct list *pvms;
 
-	if (!maps) {
-		stack;
+	if (!(pvms = pool_zalloc(mem, sizeof(*pvms)))) {
+		log_error("create_pv_maps alloc failed");
 		return NULL;
 	}
 
-	list_init(maps);
+	list_init(pvms);
 
-	if (!_create_maps(mem, pvs, maps)) {
+	if (!_create_maps(mem, allocatable_pvs, pvms)) {
 		log_error("Couldn't create physical volume maps in %s",
 			  vg->name);
-		goto bad;
+		pool_free(mem, pvms);
+		return NULL;
 	}
 
-	if (!_fill_bitsets(vg, maps)) {
-		log_error("Couldn't fill extent allocation bitmaps in %s",
-			  vg->name);
-		goto bad;
-	}
-
-	if (!_create_all_areas(mem, maps, pvs)) {
-		log_error("Couldn't create area maps in %s", vg->name);
-		goto bad;
-	}
-
-	return maps;
-
-      bad:
-	pool_free(mem, maps);
-	return NULL;
+	return pvms;
 }
 
 void consume_pv_area(struct pv_area *pva, uint32_t to_go)
